--- a/package.json
+++ b/package.json
@@ -1,53 +1,55 @@
 {
-  "name": "kanban-board",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.26",
-    "@types/react": "^17.0.24",
-    "@types/react-dom": "^17.0.9",
-    "@types/styled-components": "^5.1.14",
-    "immer": "^9.0.6",
-    "react": "^17.0.2",
-    "react-dnd": "^14.0.4",
-    "react-dnd-html5-backend": "^14.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "styled-components": "^5.3.1",
-    "typescript": "^4.4.3",
-    "use-immer": "^0.6.0",
-    "web-vitals": "^1.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "eslint-config-prettier": "^8.3.0",
-    "prettier": "2.4.1"
-  }
+    "name": "kanban-board",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^11.2.7",
+        "@testing-library/user-event": "^12.8.3",
+        "@types/jest": "^26.0.24",
+        "@types/node": "^12.20.26",
+        "@types/react": "^17.0.24",
+        "@types/react-dom": "^17.0.9",
+        "@types/styled-components": "^5.1.14",
+        "immer": "^9.0.6",
+        "react": "^17.0.2",
+        "react-dnd": "^14.0.4",
+        "react-dnd-html5-backend": "^14.0.2",
+        "react-dom": "^17.0.2",
+        "styled-components": "^5.3.1",
+        "typescript": "^4.4.3",
+        "use-immer": "^0.6.0",
+        "web-vitals": "^1.1.2"
+    },
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "serve": "vite preview"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@vitejs/plugin-react": "^2.2.0",
+        "eslint-config-prettier": "^8.3.0",
+        "prettier": "2.4.1",
+        "vite": "^3.2.2",
+        "vite-plugin-svgr": "^2.2.2",
+        "vite-tsconfig-paths": "^3.5.2"
+    }
 }
